@@ -44,8 +44,11 @@ inline DefinitePair::DefinitePair(const DefiniteAssignmentSet& set)
 
 inline DefinitePair& DefinitePair::operator=(const DefiniteAssignmentSet& rhs)
 {
-    da_set = rhs.DASet();
-    du_set = rhs.DUSet();
+    if (this != &rhs)
+    {
+        da_set = rhs.DASet();
+        du_set = rhs.DUSet();
+    }
     return *this;
 }
 
